fix-connect_redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,13 +15,13 @@ spring.redis.host=${SPRING_REDIS_HOST:localhost}
 spring.redis.port=${SPRING_REDIS_PORT:6379}
 spring.redis.timeout=10000ms
 
-# C?u hình pool cho Lettuce
+#lettuce
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-wait=-1ms
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=8
 
-# C?u hình cache s? d?ng Redis
+#cache use redis
 spring.cache.type=redis
 spring.cache.redis.time-to-live=300000
 spring.cache.redis.cache-null-values=false
