--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=management-fresher
 
 server.port=${CONTAINER_PORT:8081}
 
+admin.password=admin
+
 #postgresql
 spring.datasource.url=jdbc:postgresql://${SPRING_DATASOURCE_URL:localhost:5432/vmo_fresher}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
